@@ -1,3 +1,11 @@
+2011-03-25  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/plot.c (main), src/win/winmain.c (WinMain, WinExit),
+	src/win/wcommon.h: The code which changes the codepages for console 
+	gnuplot	is only compiled in if CONSOLE_SWITCH_CP is defined. 
+	Otherwise gnuplot will only display a warning if codepages differ.
+	Handle the case when codepages already match.
+
 2011-03-24  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/Makefile.maint: Fill in the "last modified" date from the most
